# topic-deep-diver

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENDA.md  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
src/topic_deep_diver/: __init__.py  config.py  logging_config.py  main.py  server.py  utils.py
src/topic_deep_diver/planning/: decomposer.py  models.py  planner.py
src/topic_deep_diver/query_processing/: __init__.py  engine.py  models.py  nlp_processor.py  strategy_planner.py  taxonomy_generator.py
src/topic_deep_diver/search/: __init__.py  content_extractor.py  mcp_fetch_client.py  search_cache.py  searxng_client.py
src/topic_deep_diver/source_analysis/: __init__.py  bias_detector.py  credibility_scorer.py  deduplication_engine.py  engine.py  models.py
src/topic_deep_diver/synthesis/: __init__.py  aggregator.py  citation_tracker.py  engine.py  gap_analyzer.py  models.py  narrative_generator.py
tests/: __init__.py  test_server.py  test_source_analysis.py  test_synthesis.py
