[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topic-deep-diver"
version = "0.1.0"
description = "Fully automated deep research MCP server with comprehensive topic analysis"
authors = [{name = "RouHim", email = "rouhim@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "spacy>=3.7.0",
    "nltk>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
topic-deep-diver = "topic_deep_diver.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 125

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "UP017", # Allow timezone.utc for Python <3.11 compatibility
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "types-pyyaml>=6.0.12.20250822",
]


